// 声明protobuf版本
syntax = "proto3";
// import "coupon_proto/entity.proto";
import "entity.proto";


// option go_package = "path;name";  path 表示生成的go文件的存放地址，会自动生成目录
// name表示生成的go文件所属的包名
option go_package = "../coupon_proto";
package pb;


message GetCouponListReq {
    string AccountID = 1;
}

message GetCouponListResp {
    Coupon CouponList = 1;
}

message GetCouponReq {
    int32 CouponID = 1;
}

message GetCouponResp {
	Coupon Coupon = 1;
}


// 定义服务体
service CouponsService {
    // 获取用户优惠券列表
    rpc GetCouponsByAccountID(GetCouponListReq) returns (GetCouponListResp) {}
	// 获取用户某张优惠券信息
	rpc GetCouponsByCouponID(GetCouponReq) returns (GetCouponResp) {}
}